--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,30 +1,60 @@
+@import "libs/reset.scss";
+
+body{
+  height: 100vh;
+  background: {
+    color: #f3e69f;
+  }
+}
+
 .container {
-  margin: 0 auto;
-  min-height: 100vh;
+  width: 100%;
+  max-width: 860px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  margin: 0 auto;
 }
 
-.title {
-  font-family: 'Quicksand', 'Source Sans Pro', -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-  display: block;
-  font-weight: 300;
-  font-size: 100px;
-  color: #35495e;
-  letter-spacing: 1px;
+.navbar{
+  @extend .container;
+  justify-content: space-between;
+  margin-top: 20px;
+  font-family: "Josefin sans", sans-serif;
+  font-weight: bold;
+  .logo{
+    display: flex;
+    align-items: center;
+    color: #2f2f2f;
+    fill: #2f2f2f;
+    transition: all 0.2s ease-out;
+    .nuxtLogo {
+      height: 46px;
+    }
+    .logo-title{
+      margin-left: 8px;
+    }
+    &:hover{
+      color: white;
+      cursor: pointer;
+      fill: white;
+    }
+  }
+  .menu-main{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    .menu-link{
+      text-decoration: none;
+      color: #2f2f2f;
+      margin: 0 12px;
+      transition: all 0.2s ease-out;
+      &:hover{
+        color: white
+      }
+    }
+  }
+  .menu-second{
+    @extend .menu-main
+  }
 }
 
-.subtitle {
-  font-weight: 300;
-  font-size: 42px;
-  color: #526488;
-  word-spacing: 5px;
-  padding-bottom: 15px;
-}
-
-.links {
-  padding-top: 15px;
-}
