Set global header

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -34,9 +34,9 @@ body{
       margin-left: 8px;
     }
     &:hover{
-      color: white;
+      color: #f2973b;
       cursor: pointer;
-      fill: white;
+      fill: #f2973b;
     }
   }
   .menu-main{
@@ -49,12 +49,30 @@ body{
       margin: 0 12px;
       transition: all 0.2s ease-out;
       &:hover{
-        color: white
+        color: #f2973b
       }
     }
   }
   .menu-second{
     @extend .menu-main
+  }
+}
+
+.header{
+  height: 300px;
+  width: 100%;
+  outline: 1px solid rgba($color: #ffffff, $alpha: 0.2);
+  border-radius: 3em;
+  margin: 1.6em auto;
+  text-align: center;
+  background: #f2973b;
+  /* fallback for old browsers */
+  background: -webkit-radial-gradient(ellipse at top, #f2973b, #ece254);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: radial-gradient(ellipse at top, #f2973b, #ece254);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  .header-title{
+    margin: 1.2em auto;
   }
 }
 
