--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,25 +8,28 @@ body{
 }
 
 .container {
-  width: 100%;
-  max-width: 860px;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
+  width: 80%;
+  max-width: 900px;
+}
+
+.row{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 .navbar{
   @extend .container;
+  display: flex;
   justify-content: space-between;
-  margin-top: 20px;
+  margin: 20px auto 0 auto;
   font-family: "Josefin sans", sans-serif;
   font-weight: bold;
   .logo{
     display: flex;
     align-items: center;
-    color: #2f2f2f;
-    fill: #2f2f2f;
-    transition: all 0.2s ease-out;
+    transition: color 0.2s ease-out;
+    cursor: pointer;
     .nuxtLogo {
       height: 46px;
     }
@@ -35,7 +38,6 @@ body{
     }
     &:hover{
       color: #f2973b;
-      cursor: pointer;
       fill: #f2973b;
     }
   }
@@ -43,11 +45,12 @@ body{
     list-style: none;
     display: flex;
     align-items: center;
+    padding-left: 0;
     .menu-link{
       text-decoration: none;
-      color: #2f2f2f;
+      color: black;
       margin: 0 12px;
-      transition: all 0.2s ease-out;
+      transition: color 0.2s ease-out;
       &:hover{
         color: #f2973b
       }
@@ -59,20 +62,104 @@ body{
 }
 
 .header{
-  height: 300px;
-  width: 100%;
-  outline: 1px solid rgba($color: #ffffff, $alpha: 0.2);
-  border-radius: 3em;
-  margin: 1.6em auto;
-  text-align: center;
-  background: #f2973b;
-  /* fallback for old browsers */
-  background: -webkit-radial-gradient(ellipse at top, #f2973b, #ece254);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: radial-gradient(ellipse at top, #f2973b, #ece254);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  .header-title{
-    margin: 1.2em auto;
+  @extend .container, .row;
+  position: relative;
+  margin: 1.6em auto 0 auto;
+  padding: 1.2em 0;
+  &::before{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 300px;
+    content: "";
+      border-radius: 3em;
+      text-align: center;
+      background: #f2973b;
+      /* fallback for old browsers */
+      background: -webkit-radial-gradient(ellipse at top, #f2973b, #ece254);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: radial-gradient(ellipse at top, #f2973b, #ece254);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
 }
 
+.main-card{
+  width: 70%;
+  margin: 0 auto;
+  max-width: 840px;
+  padding: 2.4em 4em;
+  background: rgba(255, 255, 255, 0.30);
+  box-shadow: 0 8px 26px 0 rgba(31, 38, 135, 0.27);
+  backdrop-filter: blur(6.0px);
+  -webkit-backdrop-filter: blur(6.0px);
+  border: 1px solid rgba(255, 255, 255, 0.24);
+  border-radius: 2.4em;
+  text-align: center;
+  p{
+    color: #2f2f2f;
+  };
+  a{
+    color: #2f2f2f;
+    transition: color 0.2s ease-out;
+    &:hover{
+      color: #31575c;
+    }
+  }
+
+}
+
+.card-subtitle{
+  margin-top: 2.4em;
+}
+
+.card-list{
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+  margin: 0 auto;
+  .card-listElt{
+  list-style: none;
+  }
+
+}
+
+.card-img{
+  width: 42px;
+  height: 42px;
+  transition: transform 0.2s ease-in-out;
+  &:hover{
+    transform: scale(1.24);
+  }
+}
+
+
+/*footer*/
+.footer{
+  background-color: #f2973b;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  .row{
+    justify-content: space-between;
+  }
+}
+
+.footer-text{
+  width: 25%;
+}
+
+.footer-list{
+  width: 75%;
+  display: flex;
+  justify-content: space-between;
+  .footer-listElt{
+    list-style: none;
+    a{
+      color: black;
+      text-decoration: none;
+    }
+  }
+}
