--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,29 +18,6 @@ body{
     margin: 0 auto;
 }
 
-// %btn{
-//   position: absolute;
-//   content: '';
-//   top: 50%;
-//   left: 50%;
-//   bottom: 50%;
-//   right: 50%;
-//   z-index: -10;
-//   background-color: rgba(255,255,255,0);
-//   transition: all 0.2s ease-in-out;
-//   &:hover{
-//     color: white;
-//     background-color: #f2973b;
-//     border-radius: 16px;
-//     top: -8px;
-//     left: -12px;
-//     bottom: -8px;
-//     right: -12px;
-//     padding: 8px;
-//     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.27);
-//   }
-// }
-
 .navbar{
   @extend .container;
   display: flex;
@@ -51,7 +28,7 @@ body{
   .logo{
     display: flex;
     align-items: center;
-    transition: color 0.2s ease-out;
+    transition: all 0.2s ease-out;
     cursor: pointer;
     .nuxtLogo {
       height: 46px;
@@ -82,9 +59,6 @@ body{
       &.nuxt-link-exact-active{
         color: #f2973b
       }
-      // &::before{
-      //   @extend %btn
-      // }
     }
   }
   .menu-second{
