--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,7 +29,9 @@ body{
     display: flex;
     align-items: center;
     transition: all 0.2s ease-out;
+    text-decoration: none;
     cursor: pointer;
+    color: black;
     .nuxtLogo {
       height: 46px;
     }
@@ -143,7 +145,7 @@ body{
 
 /*footer*/
 .footer{
-  background-color: #f2973b;
+  // background-color: #f2973b;
   position: fixed;
   bottom: 0;
   left: 0;
